Interface rework CRT

--- a/.env
+++ b/.env
@@ -78,7 +78,7 @@
 # Direwolf core options
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
 #DIREWOLF_AUTOSTART=False
-#DIREWOLF_OPTIONS="-T 0 -q dx -T %T"
+#DIREWOLF_OPTIONS="-t 0 -q dx -T %T"
 
 # --------------------------------------------------------
 # Specs for USB sound device configuration VOX_ALPHA_1
