Separated Test Server Config

--- a/.env
+++ b/.env
@@ -126,10 +126,33 @@
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 
-# Karlchen / Paulchen
+# Paulchen
+#DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
 #DIREWOLF_AUTOSTART=True
 #DIREWOLF_INSTANCES=VOX_Alpha_1
+#RNS_CONFIG=/home/bsb/.reticulum/paulchen
 #RNS_AUTOSTART=True
+#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
+#NOMADNET_AUTOSTART=True
+#NEXUS_COMPOSE_HOME=~/nexus
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#NEXUS_CONTAINER=nexus-twins
+#NEXUS_CONTAINER_ALIAS=nexus-twins
+#NEXUS_NETWORK=nexus-twins_net
+#NEXUS_ASPECT=home
+#NEXUS_ROLE={"cluster":"home"}
+#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
+
+# Karlchen
+#DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_INSTANCES=VOX_Alpha_1
+#RNS_CONFIG=/home/bsb/.reticulum/karlchen
+#RNS_AUTOSTART=True
+#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
@@ -154,6 +177,7 @@
 ##DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
 #RNS_CONFIG=/home/bsb/.reticulum/orange
 #RNS_AUTOSTART=True
+#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
@@ -172,6 +196,7 @@
 #DIREWOLF_INSTANCES=CAT_CODEC_1
 #RNS_CONFIG=/home/bsb/.reticulum/radiobox
 #RNS_AUTOSTART=True
+#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
