--- a/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
+++ b/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
@@ -7,9 +7,9 @@
 # Alternatively standard device naming as indicated by 'aplay -l' can be used as well.
 # Just replace 'Alpha' with the device id you use.
 #
-ADEVICE plughw:Charlie,0
+ADEVICE plughw:Alpha,0
 CHANNEL 0
-MYCALL N1CALL-0
+MYCALL DD8SB-1
 MODEM 1200
 FULLDUP OFF
 DWAIT 0
@@ -18,10 +18,13 @@ PERSIST 160
 TXDELAY 30
 TXTAIL 10
 
+# Dummy PPT
+PTT GPIO 22
+
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon Karlchen" delay=0:10 every=10:00 OBJNAME=NexusSrv lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
