Separated Test Server Config

--- a/nexus_root/.direwolf/paulchen/VOX_Alpha_1.conf
+++ b/nexus_root/.direwolf/paulchen/VOX_Alpha_1.conf
@@ -24,7 +24,7 @@ PTT GPIO 22
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=10:00 OBJNAME=NexusSrv lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon Paulchen" delay=0:10 every=10:00 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
