--- a/nexus_root/.direwolf/VOX_Alpha_1.conf
+++ b/nexus_root/.direwolf/VOX_Alpha_1.conf
@@ -20,7 +20,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=NX:Server lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
