--- a/nexus_root/.reticulum/karlchen/config
+++ b/nexus_root/.reticulum/karlchen/config
@@ -19,7 +19,7 @@
 
   [[TCP Client Interface - Nexus.DeltaMatrix]]
     type = TCPClientInterface
-    interface_enabled = False
+    interface_enabled = True
     outgoing = True
     target_host = nexus.deltamatrix.org
     target_port = 4251
@@ -42,7 +42,7 @@
 
   [[TCP KISS Interface #1]]
     type = TCPClientInterface
-    interface_enabled = False
+    interface_enabled = True
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8001
