--- a/.env
+++ b/.env
@@ -133,9 +133,9 @@
 #DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 #RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#RNS_AUTOSTART=True
+#RNS_AUTOSTART=No
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#NOMADNET_AUTOSTART=True
+#NOMADNET_AUTOSTART=No
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -145,8 +145,8 @@
 #NEXUS_ASPECT=home
 #NEXUS_ROLE={"cluster":"home"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
 
 # Karlchen
 #DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
@@ -155,9 +155,9 @@
 #DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 #RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#RNS_AUTOSTART=True
+#RNS_AUTOSTART=No
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#NOMADNET_AUTOSTART=True
+#NOMADNET_AUTOSTART=No
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -167,8 +167,8 @@
 #NEXUS_ASPECT=home
 #NEXUS_ROLE={"cluster":"home"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
 
 # Orange
 #DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
