--- a/.env
+++ b/.env
@@ -133,9 +133,9 @@
 #DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 #RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#RNS_AUTOSTART=No
+#RNS_AUTOSTART=False
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#NOMADNET_AUTOSTART=No
+#NOMADNET_AUTOSTART=False
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -155,9 +155,9 @@
 #DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
 #DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
 #RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#RNS_AUTOSTART=No
+#RNS_AUTOSTART=False
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#NOMADNET_AUTOSTART=No
+#NOMADNET_AUTOSTART=False
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -180,9 +180,9 @@
 ##DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
 ##DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
 #RNS_CONFIG=/home/bsb/.reticulum/orange
-#RNS_AUTOSTART=True
+#RNS_AUTOSTART=False
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
-#NOMADNET_AUTOSTART=True
+#NOMADNET_AUTOSTART=False
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
@@ -199,9 +199,9 @@
 #DIREWOLF_AUTOSTART=True
 #DIREWOLF_INSTANCES=CAT_CODEC_1
 #RNS_CONFIG=/home/bsb/.reticulum/radiobox
-#RNS_AUTOSTART=True
+#RNS_AUTOSTART=False
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
-#NOMADNET_AUTOSTART=True
+#NOMADNET_AUTOSTART=False
 #NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
