--- a/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
+++ b/nexus_root/.direwolf/karlchen/VOX_Alpha_1.conf
@@ -12,11 +12,11 @@ CHANNEL 0
 MYCALL DD8SB-2
 MODEM 1200
 FULLDUP OFF
-DWAIT 50
-SLOTTIME 30
-PERSIST 160
-TXDELAY 50
-TXTAIL 10
+#DWAIT 100
+#TXDELAY 100
+#TXTAIL 10
+#SLOTTIME 30
+#PERSIST 160
 
 # Dummy PPT
 PTT GPIO 22
