--- a/.env
+++ b/.env
@@ -145,8 +145,8 @@
 #NEXUS_ASPECT=home
 #NEXUS_ROLE={"cluster":"home"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
+##NEXUS_LONGPOLL=60
+##NEXUS_TIMEOUT=70
 
 # Karlchen
 #DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
@@ -167,8 +167,8 @@
 #NEXUS_ASPECT=home
 #NEXUS_ROLE={"cluster":"home"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
+##NEXUS_LONGPOLL=60
+##NEXUS_TIMEOUT=70
 
 # Orange
 #DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
