repull.sh with target filter

--- a/.env_master
+++ b/.env_master
@@ -127,26 +127,26 @@
 #NEXUS_COMMAND=start_nexus.sh
 
 # Paulchen
-#DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=VOX_Alpha_1
-#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
-#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-#RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#RNS_AUTOSTART=False
-#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#NOMADNET_AUTOSTART=False
-#NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#NEXUS_CONTAINER=nexus-twins
-#NEXUS_CONTAINER_ALIAS=nexus-twins
-#NEXUS_NETWORK=nexus-twins_net
-#NEXUS_ASPECT=home
-#NEXUS_ROLE={"cluster":"home"}
-#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
+#Paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
+#Paulchen:DIREWOLF_AUTOSTART=True
+#Paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
+#Paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
+#Paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
+#Paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
+#Paulchen:RNS_AUTOSTART=False
+#Paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
+#Paulchen:NOMADNET_AUTOSTART=False
+#Paulchen:NEXUS_COMPOSE_HOME=~/nexus
+#Paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#Paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#Paulchen:NEXUS_CONTAINER=nexus-twins
+#Paulchen:NEXUS_CONTAINER_ALIAS=nexus-twins
+#Paulchen:NEXUS_NETWORK=nexus-twins_net
+#Paulchen:NEXUS_ASPECT=home
+#Paulchen:NEXUS_ROLE={"cluster":"home"}
+#Paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#Paulchen:#NEXUS_LONGPOLL=60
+#Paulchen:#NEXUS_TIMEOUT=70
 
 # Karlchen
 #DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
