--- a/.env_master
+++ b/.env_master
@@ -21,86 +21,95 @@
 # python3 ~/nexus/bsbdock.nexus_context/nexus_server/nexus_server.py
 # python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
 
-# Default nexus home on local filesystem
-# If your local environment differs uncomment and change the required setting
-#NEXUS_COMPOSE_HOME=~/nexus
+#default:#################################################################
+#default:# Default nexus home on local filesystem
+#default:# If your local environment differs uncomment and change the required setting
+#default:#NEXUS_COMPOSE_HOME=~/nexus
 
-# Uncomment this variable if you want to enable auto-update of the nexus container by watchtower
-#COMPOSE_PROFILES=auto-update
-#WATCHTOWER_POLL_INTERVAL=43200
-#NEXUS_WATCHTOWER=nexus-watchtower
+#default:#################################################################
+#default:# Uncomment this variable if you want to enable auto-update of the nexus container by watchtower
+#default:#COMPOSE_PROFILES=auto-update
+#default:#WATCHTOWER_POLL_INTERVAL=43200
+#default:#NEXUS_WATCHTOWER=nexus-watchtower
 
-# Default container configuration used in default docker-compose.yml
-# If your local environment differs uncomment and change the required setting
-#NEXUS_IMAGE=bsbdock/nexus:latest
-#NEXUS_CONTAINER=nexus-server_node01
-#NEXUS_CONTAINER_ALIAS=nexus-server_node01
-#NEXUS_NETWORK=nexus-server_net
-#NEXUS_ROOT=/root
-#NEXUS_ROOT_BIND=nexus_root
-#NEXUS_PORT_RNSAPI=4242
-#NEXUS_PORT_WEB=127.0.0.1:4280
-#NEXUS_PORT_WEB=4280
-#NEXUS_PORT_JSONAPI=127.0.0.1:4281
-#NEXUS_PORT_JSONAPI=4281
-#NEXUS_RNODE_DEVICE=/dev/tty0
-#NEXUS_SND_DEVICE=/dev/snd
-#NEXUS_CAT_DEVICE=/dev/ttyUSB1
-#NEXUS_COMMAND=start_nexus_legacy.sh
+#default:#################################################################
+#default:# Default container configuration used in default docker-compose.yml
+#default:# If your local environment differs uncomment and change the required setting
+#default:#NEXUS_IMAGE=bsbdock/nexus:latest
+#default:#NEXUS_CONTAINER=nexus-server_node01
+#default:#NEXUS_CONTAINER_ALIAS=nexus-server_node01
+#default:#NEXUS_NETWORK=nexus-server_net
+#default:#NEXUS_ROOT=/root
+#default:#NEXUS_ROOT_BIND=nexus_root
+#default:#NEXUS_PORT_RNSAPI=4242
+#default:#NEXUS_PORT_WEB=127.0.0.1:4280
+#default:#NEXUS_PORT_WEB=4280
+#default:#NEXUS_PORT_JSONAPI=127.0.0.1:4281
+#default:#NEXUS_PORT_JSONAPI=4281
+#default:#NEXUS_RNODE_DEVICE=/dev/tty0
+#default:#NEXUS_SND_DEVICE=/dev/snd
+#default:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#default:#NEXUS_COMMAND=start_nexus_legacy.sh
 
-# Default reticulum configuration
-#RNS_CONFIG=/home/bsb/.reticulum
-#RNS_AUTOSTART=True
+#default:#################################################################
+#default:# Default reticulum configuration
+#default:#RNS_CONFIG=/home/bsb/.reticulum
+#default:#RNS_AUTOSTART=False
 
-# Default nomadnet configuration
-#NOMADNET_CONFIG=/home/bsb/.nomadnetwork
-#NOMADNET_AUTOSTART=True
+#default:#################################################################
+#default:# Default nomadnet configuration
+#default:#NOMADNET_CONFIG=/home/bsb/.nomadnetwork
+#default:#NOMADNET_AUTOSTART=False
 
-# Default nexus server configuration
-# If your local environment differs uncomment and change the required setting
-#NEXUS_CONFIG=/home/bsb/.nexus
-#NEXUS_PORT=4281
-#NEXUS_ASPECT=home
-#NEXUS_ROLE={"cluster":"home"}
-#NEXUS_LONGPOLL=17280
-#NEXUS_TIMEOUT=43200
-#NEXUS_BRIDGE=[]
+#default:#################################################################
+#default:# Default nexus server configuration
+#default:# If your local environment differs uncomment and change the required setting
+#default:#NEXUS_CONFIG=/home/bsb/.nexus
+#default:#NEXUS_PORT=4281
+#default:#NEXUS_ASPECT=home
+#default:#NEXUS_ROLE={"cluster":"home"}
+#default:#NEXUS_LONGPOLL=17280
+#default:#NEXUS_TIMEOUT=43200
+#default:#NEXUS_BRIDGE=[]
 
-# Default Django SuperUser settings
-#DJANGO_SUPERUSER_USERNAME=admin
-#DJANGO_SUPERUSER_PASSWORD=admin
-#DJANGO_SUPERUSER_EMAIL=admin@example.com
-#DJANGO_LOG_LEVEL=debug
+#default:#################################################################
+#default:# Default Django SuperUser settings
+#default:#DJANGO_SUPERUSER_USERNAME=admin
+#default:#DJANGO_SUPERUSER_PASSWORD=admin
+#default:#DJANGO_SUPERUSER_EMAIL=admin@example.com
+#default:#DJANGO_LOG_LEVEL=debug
 
-################################################################
-# Direwolf sound device configuration
+#default:#################################################################
+#default:# Default Direwolf sound device configuration
 
-# Direwolf core options
-#DIREWOLF_CONFIG=/home/bsb/.direwolf
-#DIREWOLF_AUTOSTART=False
-#DIREWOLF_OPTIONS="-t 0 -q dx -T %T"
+#default:#--------------------------------------------------------
+#default:# Direwolf core options
+#default:#--------------------------------------------------------
+#default:#DIREWOLF_CONFIG=/home/bsb/.direwolf
+#default:#DIREWOLF_AUTOSTART=False
+#default:#DIREWOLF_OPTIONS="-t 0 -q dx -T %T"
 
-# --------------------------------------------------------
-# Specs for USB sound device configuration VOX_ALPHA_1
-# --------------------------------------------------------
-#DIREWOLF_VOX_ALPHA_1_SOUND_CARD=Alpha
-#DIREWOLF_VOX_ALPHA_1_DUAL_SOUND_CARD=No
-#DIREWOLF_VOX_ALPHA_1_INPUT_SOUND_CARD=Alpha
-#DIREWOLF_VOX_ALPHA_1_OUTPUT_SOUND_CARD=Alpha
-#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_SWITCH=on
-#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=80%
-#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_SWITCH=off
-#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_VOLUME=0%
-#DIREWOLF_VOX_ALPHA_1_AUTO_GAIN_CONTROL=off
-#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_SWITCH=on
-#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=80%
+#default:#--------------------------------------------------------
+#default:# Specs for USB sound device configuration VOX_ALPHA_1
+#default:#--------------------------------------------------------
+#default:#DIREWOLF_VOX_ALPHA_1_SOUND_CARD=Alpha
+#default:#DIREWOLF_VOX_ALPHA_1_DUAL_SOUND_CARD=No
+#default:#DIREWOLF_VOX_ALPHA_1_INPUT_SOUND_CARD=Alpha
+#default:#DIREWOLF_VOX_ALPHA_1_OUTPUT_SOUND_CARD=Alpha
+#default:#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_SWITCH=on
+#default:#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=80%
+#default:#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_SWITCH=off
+#default:#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_VOLUME=0%
+#default:#DIREWOLF_VOX_ALPHA_1_AUTO_GAIN_CONTROL=off
+#default:#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_SWITCH=on
+#default:#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=80%
 
-# --------------------------------------------------------
-# Specs for USB sound device configuration CAT_CODEC_1
-# --------------------------------------------------------
-#DIREWOLF_CAT_CODEC_1_SOUND_CARD=CODEC
-#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_SWITCH=on
-#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_VOLUME=80%
+#default:#--------------------------------------------------------
+#default:# Specs for USB sound device configuration CAT_CODEC_1
+#default:#--------------------------------------------------------
+#default:#DIREWOLF_CAT_CODEC_1_SOUND_CARD=CODEC
+#default:#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_SWITCH=on
+#default:#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_VOLUME=80%
 
 ################################################################
 # My personal default development configuration
@@ -108,23 +117,23 @@
 # Configuration for Cockpit Dev Environment
 
 # Cockpit
-#COMPOSE_PROFILES=auto-update
-#WATCHTOWER_POLL_INTERVAL=300
-#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#RNS_AUTOSTART=True
-#NOMADNET_AUTOSTART=True
-#NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#NEXUS_CONTAINER=nexus-cockpit
-#NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#NEXUS_NETWORK=nexus-cockpit_net
-#NEXUS_ASPECT=cockpit
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
-#NEXUS_ROLE={"cluster":"cockpit"}
-#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-#NEXUS_COMMAND=start_nexus.sh
+#Cockpit:COMPOSE_PROFILES=auto-update
+#Cockpit:WATCHTOWER_POLL_INTERVAL=300
+#Cockpit:NEXUS_WATCHTOWER=nexus-watchtower_cockpit
+#Cockpit:RNS_AUTOSTART=True
+#Cockpit:NOMADNET_AUTOSTART=True
+#Cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
+#Cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
+#Cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#Cockpit:NEXUS_CONTAINER=nexus-cockpit
+#Cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
+#Cockpit:NEXUS_NETWORK=nexus-cockpit_net
+#Cockpit:NEXUS_ASPECT=cockpit
+#Cockpit:NEXUS_ROLE={"cluster":"cockpit"}
+#Cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#Cockpit:NEXUS_COMMAND=start_nexus.sh
+#Cockpit:#NEXUS_LONGPOLL=60
+#Cockpit:#NEXUS_TIMEOUT=70
 
 # Paulchen
 #Paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
@@ -149,68 +158,68 @@
 #Paulchen:#NEXUS_TIMEOUT=70
 
 # Karlchen
-#DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=VOX_Alpha_1
-#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
-#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-#RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#RNS_AUTOSTART=False
-#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#NOMADNET_AUTOSTART=False
-#NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#NEXUS_CONTAINER=nexus-twins
-#NEXUS_CONTAINER_ALIAS=nexus-twins
-#NEXUS_NETWORK=nexus-twins_net
-#NEXUS_ASPECT=home
-#NEXUS_ROLE={"cluster":"home"}
+#Karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
+#Karlchen:DIREWOLF_AUTOSTART=True
+#Karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
+#Karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
+#Karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
+#Karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
+#Karlchen:RNS_AUTOSTART=False
+#Karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
+#Karlchen:NOMADNET_AUTOSTART=False
+#Karlchen:NEXUS_COMPOSE_HOME=~/nexus
+#Karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#Karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#Karlchen:NEXUS_CONTAINER=nexus-twins
+#Karlchen:NEXUS_CONTAINER_ALIAS=nexus-twins
+#Karlchen:NEXUS_NETWORK=nexus-twins_net
+#Karlchen:NEXUS_ASPECT=home
+#Karlchen:NEXUS_ROLE={"cluster":"home"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
+#Karlchen:#NEXUS_LONGPOLL=60
+#Karlchen:#NEXUS_TIMEOUT=70
 
 # Orange
-#DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=VOX_Alpha_1
-#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
-#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
-##DIREWOLF_INSTANCES=VOX_Charlie_1
-##DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
-##DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
-#RNS_CONFIG=/home/bsb/.reticulum/orange
-#RNS_AUTOSTART=False
-#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
-#NOMADNET_AUTOSTART=False
-#NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#NEXUS_CONTAINER=nexus-orange
-#NEXUS_CONTAINER_ALIAS=nexus-orange
-#NEXUS_NETWORK=nexus-orange_net
-#NEXUS_ASPECT=delta
-#NEXUS_ROLE={"cluster":"lora"}
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
+#Orange:DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
+#Orange:DIREWOLF_AUTOSTART=True
+#Orange:DIREWOLF_INSTANCES=VOX_Alpha_1
+#Orange:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
+#Orange:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
+#Orange:#DIREWOLF_INSTANCES=VOX_Charlie_1
+#Orange:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
+#Orange:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+#Orange:RNS_CONFIG=/home/bsb/.reticulum/orange
+#Orange:RNS_AUTOSTART=False
+#Orange:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
+#Orange:NOMADNET_AUTOSTART=False
+#Orange:NEXUS_COMPOSE_HOME=~/nexus
+#Orange:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#Orange:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#Orange:NEXUS_CONTAINER=nexus-orange
+#Orange:NEXUS_CONTAINER_ALIAS=nexus-orange
+#Orange:NEXUS_NETWORK=nexus-orange_net
+#Orange:NEXUS_ASPECT=delta
+#Orange:NEXUS_ROLE={"cluster":"lora"}
+#Orange:#NEXUS_LONGPOLL=60
+#Orange:#NEXUS_TIMEOUT=70
 
 # Radiobox
-#DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=CAT_CODEC_1
-#RNS_CONFIG=/home/bsb/.reticulum/radiobox
-#RNS_AUTOSTART=False
-#NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
-#NOMADNET_AUTOSTART=False
-#NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-#NEXUS_CONTAINER=nexus-radiobox
-#NEXUS_CONTAINER_ALIAS=nexus-radiobox
-#NEXUS_NETWORK=nexus-radiobox_net
-#NEXUS_ASPECT=delta
-#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
-##NEXUS_LONGPOLL=60
-##NEXUS_TIMEOUT=70
-#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#Radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
+#Radiobox:DIREWOLF_AUTOSTART=True
+#Radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
+#Radiobox:RNS_CONFIG=/home/bsb/.reticulum/radiobox
+#Radiobox:RNS_AUTOSTART=False
+#Radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
+#Radiobox:NOMADNET_AUTOSTART=False
+#Radiobox:NEXUS_COMPOSE_HOME=~/nexus
+#Radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+#Radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+#Radiobox:NEXUS_CONTAINER=nexus-radiobox
+#Radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
+#Radiobox:NEXUS_NETWORK=nexus-radiobox_net
+#Radiobox:NEXUS_ASPECT=delta
+#Radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#Radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#Radiobox:NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#Radiobox:#NEXUS_LONGPOLL=60
+#Radiobox:#NEXUS_TIMEOUT=70
