--- a/.env_master
+++ b/.env_master
@@ -22,16 +22,25 @@
 # python3 ./bsbdock.nexus_context/nexus_server/nexus_server.py --aspect=delta --role={\"cluster\":\"lora\"} --timeout=90 --longpoll=60
 
 #default:#################################################################
+#default:# Default values used within the Nexus Container
+#default:# You can overwrite those values to adjust them to your needs
+#default:# by uncommenting and changing the parameter you like to have changed
+#default:#
+#default:# WARNING:
+#default:# This file gets recreated if you run nexus_pull.sh next time
+#default:# If you want to keep you changes to the .env file use NO_ENV as template name for nexus_pull.sh
+#default:#
+#default:#################################################################
 #default:# Default nexus home on local filesystem
 #default:# If your local environment differs uncomment and change the required setting
 #default:#NEXUS_COMPOSE_HOME=~/nexus
-
+#default:
 #default:#################################################################
 #default:# Uncomment this variable if you want to enable auto-update of the nexus container by watchtower
 #default:#COMPOSE_PROFILES=auto-update
 #default:#WATCHTOWER_POLL_INTERVAL=43200
 #default:#NEXUS_WATCHTOWER=nexus-watchtower
-
+#default:
 #default:#################################################################
 #default:# Default container configuration used in default docker-compose.yml
 #default:# If your local environment differs uncomment and change the required setting
@@ -50,17 +59,17 @@
 #default:#NEXUS_SND_DEVICE=/dev/snd
 #default:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #default:#NEXUS_COMMAND=start_nexus_legacy.sh
-
+#default:
 #default:#################################################################
 #default:# Default reticulum configuration
 #default:#RNS_CONFIG=/home/bsb/.reticulum
 #default:#RNS_AUTOSTART=False
-
+#default:
 #default:#################################################################
 #default:# Default nomadnet configuration
 #default:#NOMADNET_CONFIG=/home/bsb/.nomadnetwork
 #default:#NOMADNET_AUTOSTART=False
-
+#default:
 #default:#################################################################
 #default:# Default nexus server configuration
 #default:# If your local environment differs uncomment and change the required setting
@@ -71,24 +80,24 @@
 #default:#NEXUS_LONGPOLL=17280
 #default:#NEXUS_TIMEOUT=43200
 #default:#NEXUS_BRIDGE=[]
-
+#default:
 #default:#################################################################
 #default:# Default Django SuperUser settings
 #default:#DJANGO_SUPERUSER_USERNAME=admin
 #default:#DJANGO_SUPERUSER_PASSWORD=admin
 #default:#DJANGO_SUPERUSER_EMAIL=admin@example.com
 #default:#DJANGO_LOG_LEVEL=debug
-
+#default:
 #default:#################################################################
 #default:# Default Direwolf sound device configuration
-
+#default:
 #default:#--------------------------------------------------------
 #default:# Direwolf core options
 #default:#--------------------------------------------------------
 #default:#DIREWOLF_CONFIG=/home/bsb/.direwolf
 #default:#DIREWOLF_AUTOSTART=False
 #default:#DIREWOLF_OPTIONS="-t 0 -q dx -T %T"
-
+#default:
 #default:#--------------------------------------------------------
 #default:# Specs for USB sound device configuration VOX_ALPHA_1
 #default:#--------------------------------------------------------
@@ -103,7 +112,7 @@
 #default:#DIREWOLF_VOX_ALPHA_1_AUTO_GAIN_CONTROL=off
 #default:#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_SWITCH=on
 #default:#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=80%
-
+#default:
 #default:#--------------------------------------------------------
 #default:# Specs for USB sound device configuration CAT_CODEC_1
 #default:#--------------------------------------------------------
