new pull end .env template script

--- a/.env_master
+++ b/.env_master
@@ -29,7 +29,7 @@
 #default:# WARNING:
 #default:# This file gets recreated if you run nexus_pull.sh next time
 #default:# If you want to keep you changes to the .env file use NO_ENV as template name for nexus_pull.sh
-#default:#
+#default:
 #default:#################################################################
 #default:# Default nexus home on local filesystem
 #default:# If your local environment differs uncomment and change the required setting
