new pull end .env template script

--- a/.env_master
+++ b/.env_master
@@ -126,109 +126,109 @@
 # Configuration for Cockpit Dev Environment
 
 # Cockpit
-#Cockpit:COMPOSE_PROFILES=auto-update
-#Cockpit:WATCHTOWER_POLL_INTERVAL=300
-#Cockpit:NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-#Cockpit:RNS_AUTOSTART=True
-#Cockpit:NOMADNET_AUTOSTART=True
-#Cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#Cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
-#Cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#Cockpit:NEXUS_CONTAINER=nexus-cockpit
-#Cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#Cockpit:NEXUS_NETWORK=nexus-cockpit_net
-#Cockpit:NEXUS_ASPECT=cockpit
-#Cockpit:NEXUS_ROLE={"cluster":"cockpit"}
-#Cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-#Cockpit:NEXUS_COMMAND=start_nexus.sh
-#Cockpit:#NEXUS_LONGPOLL=60
-#Cockpit:#NEXUS_TIMEOUT=70
+#cockpit:COMPOSE_PROFILES=auto-update
+#cockpit:WATCHTOWER_POLL_INTERVAL=300
+#cockpit:NEXUS_WATCHTOWER=nexus-watchtower_cockpit
+#cockpit:RNS_AUTOSTART=True
+#cockpit:NOMADNET_AUTOSTART=True
+#cockpit:NEXUS_COMPOSE_HOME=~/nexus_cockpit
+#cockpit:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
+#cockpit:NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+#cockpit:NEXUS_CONTAINER=nexus-cockpit
+#cockpit:NEXUS_CONTAINER_ALIAS=nexus-cockpit
+#cockpit:NEXUS_NETWORK=nexus-cockpit_net
+#ccckpit:NEXUS_ASPECT=cockpit
+#cockpit:NEXUS_ROLE={"cluster":"cockpit"}
+#cockpit:NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+#cockpit:NEXUS_COMMAND=start_nexus.sh
+#cockpit:#NEXUS_LONGPOLL=60
+#cockpit:#NEXUS_TIMEOUT=70
 
 # Paulchen
-#Paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
-#Paulchen:DIREWOLF_AUTOSTART=True
-#Paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
-#Paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
-#Paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-#Paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
-#Paulchen:RNS_AUTOSTART=False
-#Paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
-#Paulchen:NOMADNET_AUTOSTART=False
-#Paulchen:NEXUS_COMPOSE_HOME=~/nexus
-#Paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#Paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#Paulchen:NEXUS_CONTAINER=nexus-twins
-#Paulchen:NEXUS_CONTAINER_ALIAS=nexus-twins
-#Paulchen:NEXUS_NETWORK=nexus-twins_net
-#Paulchen:NEXUS_ASPECT=home
-#Paulchen:NEXUS_ROLE={"cluster":"home"}
-#Paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#Paulchen:#NEXUS_LONGPOLL=60
-#Paulchen:#NEXUS_TIMEOUT=70
+#paulchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/paulchen
+#paulchen:DIREWOLF_AUTOSTART=True
+#paulchen:DIREWOLF_INSTANCES=VOX_Alpha_1
+#paulchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
+#paulchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
+#paulchen:RNS_CONFIG=/home/bsb/.reticulum/paulchen
+#paulchen:RNS_AUTOSTART=False
+#paulchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/paulchen
+#paulchen:NOMADNET_AUTOSTART=False
+#paulchen:NEXUS_COMPOSE_HOME=~/nexus
+#paulchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#paulchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#paulchen:NEXUS_CONTAINER=nexus-twins
+#paulchen:NEXUS_CONTAINER_ALIAS=nexus-twins
+#paulchen:NEXUS_NETWORK=nexus-twins_net
+#paulchen:NEXUS_ASPECT=home
+#paulchen:NEXUS_ROLE={"cluster":"home"}
+#paulchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#paulchen:#NEXUS_LONGPOLL=60
+#paulchen:#NEXUS_TIMEOUT=70
 
 # Karlchen
-#Karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
-#Karlchen:DIREWOLF_AUTOSTART=True
-#Karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
-#Karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
-#Karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
-#Karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
-#Karlchen:RNS_AUTOSTART=False
-#Karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
-#Karlchen:NOMADNET_AUTOSTART=False
-#Karlchen:NEXUS_COMPOSE_HOME=~/nexus
-#Karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#Karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#Karlchen:NEXUS_CONTAINER=nexus-twins
-#Karlchen:NEXUS_CONTAINER_ALIAS=nexus-twins
-#Karlchen:NEXUS_NETWORK=nexus-twins_net
-#Karlchen:NEXUS_ASPECT=home
-#Karlchen:NEXUS_ROLE={"cluster":"home"}
-#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#Karlchen:#NEXUS_LONGPOLL=60
-#Karlchen:#NEXUS_TIMEOUT=70
+#karlchen:DIREWOLF_CONFIG=/home/bsb/.direwolf/karlchen
+#karlchen:DIREWOLF_AUTOSTART=True
+#karlchen:DIREWOLF_INSTANCES=VOX_Alpha_1
+#karlchen:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=20%
+#karlchen:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=40%
+#karlchen:RNS_CONFIG=/home/bsb/.reticulum/karlchen
+#karlchen:RNS_AUTOSTART=False
+#karlchen:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/karlchen
+#karlchen:NOMADNET_AUTOSTART=False
+#karlchen:NEXUS_COMPOSE_HOME=~/nexus
+#karlchen:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#karlchen:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#karlchen:NEXUS_CONTAINER=nexus-twins
+#karlchen:NEXUS_CONTAINER_ALIAS=nexus-twins
+#karlchen:NEXUS_NETWORK=nexus-twins_net
+#karlchen:NEXUS_ASPECT=home
+#karlchen:NEXUS_ROLE={"cluster":"home"}
+#karlchen:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#karlchen:#NEXUS_LONGPOLL=60
+#karlchen:#NEXUS_TIMEOUT=70
 
 # Orange
-#Orange:DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
-#Orange:DIREWOLF_AUTOSTART=True
-#Orange:DIREWOLF_INSTANCES=VOX_Alpha_1
-#Orange:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
-#Orange:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
-#Orange:#DIREWOLF_INSTANCES=VOX_Charlie_1
-#Orange:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
-#Orange:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
-#Orange:RNS_CONFIG=/home/bsb/.reticulum/orange
-#Orange:RNS_AUTOSTART=False
-#Orange:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
-#Orange:NOMADNET_AUTOSTART=False
-#Orange:NEXUS_COMPOSE_HOME=~/nexus
-#Orange:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#Orange:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#Orange:NEXUS_CONTAINER=nexus-orange
-#Orange:NEXUS_CONTAINER_ALIAS=nexus-orange
-#Orange:NEXUS_NETWORK=nexus-orange_net
-#Orange:NEXUS_ASPECT=delta
-#Orange:NEXUS_ROLE={"cluster":"lora"}
-#Orange:#NEXUS_LONGPOLL=60
-#Orange:#NEXUS_TIMEOUT=70
+#orange:DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
+#orange:DIREWOLF_AUTOSTART=True
+#orange:DIREWOLF_INSTANCES=VOX_Alpha_1
+#orange:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
+#orange:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
+#orange:#DIREWOLF_INSTANCES=VOX_Charlie_1
+#orange:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
+#orange:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+#orange:RNS_CONFIG=/home/bsb/.reticulum/orange
+#orange:RNS_AUTOSTART=False
+#orange:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
+#orange:NOMADNET_AUTOSTART=False
+#orange:NEXUS_COMPOSE_HOME=~/nexus
+#orange:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#orange:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#orange:NEXUS_CONTAINER=nexus-orange
+#orange:NEXUS_CONTAINER_ALIAS=nexus-orange
+#orange:NEXUS_NETWORK=nexus-orange_net
+#orange:NEXUS_ASPECT=delta
+#orange:NEXUS_ROLE={"cluster":"lora"}
+#orange:#NEXUS_LONGPOLL=60
+#orange:#NEXUS_TIMEOUT=70
 
 # Radiobox
-#Radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
-#Radiobox:DIREWOLF_AUTOSTART=True
-#Radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
-#Radiobox:RNS_CONFIG=/home/bsb/.reticulum/radiobox
-#Radiobox:RNS_AUTOSTART=False
-#Radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
-#Radiobox:NOMADNET_AUTOSTART=False
-#Radiobox:NEXUS_COMPOSE_HOME=~/nexus
-#Radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-#Radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-#Radiobox:NEXUS_CONTAINER=nexus-radiobox
-#Radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
-#Radiobox:NEXUS_NETWORK=nexus-radiobox_net
-#Radiobox:NEXUS_ASPECT=delta
-#Radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
-#Radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#Radiobox:NEXUS_CAT_DEVICE=/dev/ttyUSB1
-#Radiobox:#NEXUS_LONGPOLL=60
-#Radiobox:#NEXUS_TIMEOUT=70
+#radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
+#radiobox:DIREWOLF_AUTOSTART=True
+#radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
+#radiobox:RNS_CONFIG=/home/bsb/.reticulum/radiobox
+#radiobox:RNS_AUTOSTART=False
+#radiobox:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/radiobox
+#radiobox:NOMADNET_AUTOSTART=False
+#radiobox:NEXUS_COMPOSE_HOME=~/nexus
+#radiobox:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+#radiobox:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+#radiobox:NEXUS_CONTAINER=nexus-radiobox
+#radiobox:NEXUS_CONTAINER_ALIAS=nexus-radiobox
+#radiobox:NEXUS_NETWORK=nexus-radiobox_net
+#radiobox:NEXUS_ASPECT=delta
+#radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#radiobox:NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#radiobox:#NEXUS_LONGPOLL=60
+#radiobox:#NEXUS_TIMEOUT=70
