--- a/.env_master
+++ b/.env_master
@@ -214,7 +214,7 @@
 
 # Radiobox
 #radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
-#radiobox:DIREWOLF_AUTOSTART=True
+#radiobox:DIREWOLF_AUTOSTART=False
 #radiobox:DIREWOLF_INSTANCES=CAT_CODEC_1
 #radiobox:RNS_CONFIG=/home/bsb/.reticulum/radiobox
 #radiobox:RNS_AUTOSTART=False
@@ -229,6 +229,6 @@
 #radiobox:NEXUS_ASPECT=delta
 #radiobox:NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 #radiobox:NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#radiobox:NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
 #radiobox:#NEXUS_TIMEOUT=70
