--- a/.env_master
+++ b/.env_master
@@ -232,3 +232,33 @@
 #radiobox:#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #radiobox:#NEXUS_LONGPOLL=60
 #radiobox:#NEXUS_TIMEOUT=70
+
+# Radiobox2
+#radiobox2:NEXUS_COMPOSE_HOME=~/nexus
+#radiobox2:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox2
+#radiobox2:DIREWOLF_AUTOSTART=False
+#radiobox2:DIREWOLF_INSTANCES=VOX_Alpha_1
+#radiobox2:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/radiobox2
+#radiobox2:RNS_AUTOSTART=False
+#radiobox2:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/radiobox2
+#radiobox2:NOMADNET_AUTOSTART=False
+#radiobox2:NEXUS_ASPECT=delta
+#radiobox2:NEXUS_ROLE={"cluster":"lora"}
+#radiobox2:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#radiobox2:#NEXUS_LONGPOLL=60
+#radiobox2:#NEXUS_TIMEOUT=70
+
+# Radiobox3
+#radiobox3:NEXUS_COMPOSE_HOME=~/nexus
+#radiobox3:DIREWOLF_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.direwolf/radiobox3
+#radiobox3:DIREWOLF_AUTOSTART=False
+#radiobox3:DIREWOLF_INSTANCES=VOX_Alpha_1
+#radiobox3:RNS_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.reticulum/radiobox3
+#radiobox3:RNS_AUTOSTART=False
+#radiobox3:NOMADNET_CONFIG=$NEXUS_COMPOSE_HOME/nexus_root/.nomadnetwork/radiobox3
+#radiobox3:NOMADNET_AUTOSTART=False
+#radiobox3:NEXUS_ASPECT=delta
+#radiobox3:NEXUS_ROLE={"cluster":"lora"}
+#radiobox3:NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#radiobox3:#NEXUS_LONGPOLL=60
+#radiobox3:#NEXUS_TIMEOUT=70
