renamed orange to orangepi

--- a/.env_master
+++ b/.env_master
@@ -189,28 +189,28 @@
 #karlchen:#NEXUS_TIMEOUT=70
 
 # Orange
-#orange:DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
-#orange:DIREWOLF_AUTOSTART=True
-#orange:DIREWOLF_INSTANCES=VOX_Alpha_1
-#orange:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
-#orange:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
-#orange:#DIREWOLF_INSTANCES=VOX_Charlie_1
-#orange:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
-#orange:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
-#orange:RNS_CONFIG=/home/bsb/.reticulum/orange
-#orange:RNS_AUTOSTART=False
-#orange:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orange
-#orange:NOMADNET_AUTOSTART=False
-#orange:NEXUS_COMPOSE_HOME=~/nexus
-#orange:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#orange:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#orange:NEXUS_CONTAINER=nexus-orange
-#orange:NEXUS_CONTAINER_ALIAS=nexus-orange
-#orange:NEXUS_NETWORK=nexus-orange_net
-#orange:NEXUS_ASPECT=delta
-#orange:NEXUS_ROLE={"cluster":"lora"}
-#orange:#NEXUS_LONGPOLL=60
-#orange:#NEXUS_TIMEOUT=70
+#orangepi:DIREWOLF_CONFIG=/home/bsb/.direwolf/orangepi
+#orangepi:DIREWOLF_AUTOSTART=True
+#orangepi:DIREWOLF_INSTANCES=VOX_Alpha_1
+#orangepi:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
+#orangepi:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
+#orangepi:#DIREWOLF_INSTANCES=VOX_Charlie_1
+#orangepi:#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=60%
+#orangepi:#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+#orangepi:RNS_CONFIG=/home/bsb/.reticulum/orangepi
+#orangepi:RNS_AUTOSTART=False
+#orangepi:NOMADNET_CONFIG=/home/bsb/.nomadnetwork/orangepi
+#orangepi:NOMADNET_AUTOSTART=False
+#orangepi:NEXUS_COMPOSE_HOME=~/nexus
+#orangepi:NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#orangepi:NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#orangepi:NEXUS_CONTAINER=nexus-orangepi
+#orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
+#orangepi:NEXUS_NETWORK=nexus-orangepi_net
+#orangepi:NEXUS_ASPECT=delta
+#orangepi:NEXUS_ROLE={"cluster":"lora"}
+#orangepi:#NEXUS_LONGPOLL=60
+#orangepi:#NEXUS_TIMEOUT=70
 
 # Radiobox
 #radiobox:DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
