nomadnet config for all bsb nodes added

--- a/.env_master
+++ b/.env_master
@@ -190,7 +190,7 @@
 
 # Orange
 #orangepi:DIREWOLF_CONFIG=/home/bsb/.direwolf/orangepi
-#orangepi:DIREWOLF_AUTOSTART=True
+#orangepi:DIREWOLF_AUTOSTART=False
 #orangepi:DIREWOLF_INSTANCES=VOX_Alpha_1
 #orangepi:DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=60%
 #orangepi:DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
