--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -34,8 +34,8 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = NO1CLL-0
-    id_interval = 600
+#    id_callsign = NO1CLL-0
+#    id_interval = 600
     network_name = myNetName
     passphrase = myNetPassword
     flow_control = False
