--- a/nexus_root/.reticulum/radiobox/config
+++ b/nexus_root/.reticulum/radiobox/config
@@ -34,8 +34,8 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB-1
-    id_interval = 600
+#    id_callsign = DD8SB-1
+#    id_interval = 600
     network_name = myLoRaCluster
     passphrase = myLoraCluster
     flow_control = False
