--- a/nexus_root/.reticulum/radiobox2/config
+++ b/nexus_root/.reticulum/radiobox2/config
@@ -27,8 +27,8 @@
     txpower = 7
     spreadingfactor = 8
     codingrate = 5
-    id_callsign = DD8SB-2
-    id_interval = 600
+#    id_callsign = DD8SB-2
+#    id_interval = 600
     network_name = myLoRaCluster
     passphrase = myLoraCluster
     flow_control = False
