Disabled RNS Beacon

--- a/.env_master
+++ b/.env_master
@@ -207,8 +207,10 @@
 #orangepi:NEXUS_CONTAINER=nexus-orangepi
 #orangepi:NEXUS_CONTAINER_ALIAS=nexus-orangepi
 #orangepi:NEXUS_NETWORK=nexus-orangepi_net
-#orangepi:NEXUS_ASPECT=delta
-#orangepi:NEXUS_ROLE={"cluster":"lora"}
+#orangepi:NEXUS_ASPECT=home
+#orangepi:NEXUS_ROLE={"cluster":"home"}
+#orangepi:#NEXUS_ASPECT=delta
+#orangepi:#NEXUS_ROLE={"cluster":"lora"}
 #orangepi:#NEXUS_LONGPOLL=60
 #orangepi:#NEXUS_TIMEOUT=70
 
